@@ -1,3 +1,12 @@
+2019-09-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.h,
+	  src/SDCCicode.c,
+	  src/SDCCsalloc.hpp,
+	  src/stm8/gen.c,
+	  src/z80/gen.c:
+	  Improve tail call optimization.
+
 2019-09-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCsymt.h:
